 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2015 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2015 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2015-06-01
r1604 refine fill algorithm
- remove fill_bid.h


--------------------------
2015-05-24
r1603 modify isnan()
- define ISNAN in FBdefine.h

--------------------------
2015-03-14
r1602 update libraries

--------------------------
2015-03-08
r1601 bug fix of loadBCs()
- set dummy values for cmp[m].medium in case of Periodic
- skip rading filepath for intrinsic problems

--------------------------
2015-03-01
r1600 remove comment in Initialize

r1599 import statistic code
- confirm detail later

r1598 bug fix in fillSeedBcdInner(), getFillParam()
- reference point must be dimensional, partially it was non-dimensional

--------------------------
2015-02-25
r1597 generate polylib.tp file from boundary section

--------------------------
2015-02-24
r1596 modify fill medium

--------------------------
2015-02-22
r1595 bug fix and check intrinsic problems
- 2Dcavity, 3Dcavity, 2Dcyl, Cylinder, Jet, LDC, PMT, ThermalCavity, SHC1D

r1594 merge parsing of local and outer BCs

--------------------------
2015-02-21
r1593 setBit5ID() >> setMediumID()
 - check Cylinder

--------------------------
2015-02-17
r1592 modify passive scalar part for compressed cut
- check 2Dcavity, 3Dcavity, 2Dcyl, Cylinder, LDC, PMT, SHC1D ,Jet, HeatedPlate, ThermalCavity

--------------------------
2015-02-14
r1591 Is there seed points inside domain?

--------------------------
2015-02-11
r1590 refactoring of fill process
- introduction of fill hint

--------------------------
2015-02-07
r1589 insert mpi.h at first in ParseMat.h and CompoFraction.h
