@@ -25,7 +25,7 @@ AC_CONFIG_HEADERS([config.h])
 #
 # revision No.
 #
-FFVC_REVISION="20150601_1630"
+FFVC_REVISION="20150604_1800"
 AC_SUBST(FFVC_REVISION)
 
 
