@@ -21,7 +21,7 @@
 #define _FFVC_VERSION_H_
 
 #define FFVC_VERSION_NO  "2.1.7"
-#define FFVC_REVISION    "20150601_1630"
+#define FFVC_REVISION    "20150604_1800"
 
 #endif /* _FFVC_VERSION_H_ */
 
