@@ -949,7 +949,7 @@ int IO_BASE::writeCellID(const int out_gc)
   bool ret = false;
   int ret_val;
   
-  // サブドメイン内が同じ値の時には、CellID配列を書き出さない
+  // サブドメイン内が同じ値の時(c=0)には、CellID配列を書き出さずに戻り値はval
   if ( c>0 )
   {
     ret = BVX_IO::Save_Block_CellID(size, gc, bitWidth, rank, OutDirPath, buf, BVXcomp);
@@ -1190,121 +1190,13 @@ void IO_BASE::writeRawSPH(const REAL_TYPE *vf,
   if (f) { delete [] f; f=NULL; }
 }
 
-// #################################################################
-// 例題のモデルをsvxフォーマットで出力する(体積率とID)
-bool IO_BASE::writeSVX(REAL_TYPE *vf, int *id)
-{
-  if ( IO_Voxel != voxel_SVX ) return false;
-  
-  int    sz, ix, jx, kx;
-  size_t m, l;
-  float  ox, oy, oz, dx, dy, dz;
-  
-  char svx_fname[512];
-  
-  if ( paraMngr->IsParallel() ) {
-    sprintf( svx_fname, "example_%06d.svx", paraMngr->GetMyRankID() );
-  } else {
-    sprintf( svx_fname, "example.svx" );
-  }
-  ofstream ofs(svx_fname, ios::out | ios::binary);
-  if (!ofs) {
-    cout << "\tCan't open " << svx_fname << " file" << endl;
-    Exit(0);
-  }
-  
-  int imax = size[0];
-  int jmax = size[1];
-  int kmax = size[2];
-  int gd = guide;
-  
-  ix = imax+2;  // +2 means guide cell for IP model
-  jx = jmax+2;
-  kx = kmax+2;
-  
-  size_t nx = ix*jx*kx;
-  
-  dx = (float)pitch[0]*C->RefLength;
-  dy = (float)pitch[1]*C->RefLength;
-  dz = (float)pitch[2]*C->RefLength;
-  ox = (float)origin[0]*C->RefLength - dx; // 片側1層分をシフト
-  oy = (float)origin[1]*C->RefLength - dy;
-  oz = (float)origin[2]*C->RefLength - dz;
-  
-  //stamped_printf("example out org(%e %e %e) dimensional\n", ox, oy, oz);
-  
-  float *f = new float[nx];
-  int   *q = new int[nx];
-  
-  for (int k=0; k<=(kmax+1); k++) {
-    for (int j=0; j<=(jmax+1); j++) {
-      for (int i=0; i<=(imax+1); i++) {
-        l = (size_t)(ix*jx*k + ix*j + i);
-        m = _F_IDX_S3D(i, j, k, imax, jmax, kmax, gd);
-        q[l] = id[m];
-        f[l] = (float)vf[m];
-      }
-    }
-  }
-  
-  // voxel size
-  sz = sizeof(int)*3;
-  ofs.write( (char*)&sz, sizeof(int) );
-  ofs.write( (char*)&ix, sizeof(int) );
-  ofs.write( (char*)&jx, sizeof(int) );
-  ofs.write( (char*)&kx, sizeof(int) );
-  ofs.write( (char*)&sz, sizeof(int) );
-  
-  // original point of domain
-  sz = sizeof(float)*3;
-  ofs.write( (char*)&sz, sizeof(int) );
-  ofs.write( (char*)&ox, sizeof(float) );
-  ofs.write( (char*)&oy, sizeof(float) );
-  ofs.write( (char*)&oz, sizeof(float) );
-  ofs.write( (char*)&sz, sizeof(int) );
-  
-  // pitch of voxel
-  ofs.write( (char*)&sz, sizeof(int) );
-  ofs.write( (char*)&dx, sizeof(float) );
-  ofs.write( (char*)&dy, sizeof(float) );
-  ofs.write( (char*)&dz, sizeof(float) );
-  ofs.write( (char*)&sz, sizeof(int) );
-  
-  // type of stored data
-  sz = sizeof(int)*1;
-  int dtype = 0;
-  dtype |= ( 0x1<<0 );  // volume fraction
-  dtype |= ( 0x1<<2 );  // medium ID
-  ofs.write( (char*)&sz,  sizeof(int) );
-  ofs.write( (char*)&dtype, sizeof(int) );
-  ofs.write( (char*)&sz,  sizeof(int) );
-  
-  // volume fraction
-  sz = nx * sizeof(float);
-  ofs.write( (char*)&sz, sizeof(int) );
-  ofs.write( (char*)f,   sz );
-  ofs.write( (char*)&sz, sizeof(int) );
-  
-  // medium ID
-  sz = nx * sizeof(int);
-  ofs.write( (char*)&sz, sizeof(int) );
-  ofs.write( (char*)q,   sz );
-  ofs.write( (char*)&sz, sizeof(int) );
-  
-  ofs.close();
-  
-  if (f) { delete [] f; f=NULL; }
-  if (q) { delete [] q; q=NULL; }
-  
-  return true;
-}
 
 
 // #################################################################
 // 例題のモデルをsvxフォーマットで出力する(ID)
 bool IO_BASE::writeSVX(const int* array, const bool flag)
 {
-  if ( IO_Voxel != voxel_SVX ) return false;
+  //if ( IO_Voxel != voxel_SVX ) return false;
   
   int   sz, ix, jx, kx;
   size_t m, l;
